# coderTools

./: README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run_test.sh  setup.py  update_docs.sh
client/: index.html
codertools/: __init__.py  main.py
codertools/packager/: __init__.py  function.py  utils.py  utils2.py
codertools/queryer/: adapter.py  build.py  reader.py  sql.py
docs/: client.md  index.md
search/: search_index.json
test/: test.py  test_packager.py
