[project]
name = "codertools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.28",
    "llama-index-readers-github>=0.6.0",
    "pinecone>=6.0.2",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "setuptools>=78.1.0",
]
