[project]
name = "obragtools"
version = "0.1.3"
description = "优化了issue "
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "llama-index>=0.12.28",
    "llama-index-readers-github>=0.6.0",
    "pinecone>=6.0.2",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "setuptools>=78.1.0",
]
